--- a/index.ipynb
+++ b/index.ipynb
@@ -118,11 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-5-1a106fecce05>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-1a106fecce05>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    email = 'art.vandelay@vandelay.co\"\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
-    "email = 'art.vandelay@vandelay.co'"
+    "email = \"art.vandelay@vandelay.co\""
    ]
   },
   {
